--- a/cit230/index.html
+++ b/cit230/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<header>
-			<img src="images/IMG-1185.jpg" width="273"
+			<img src="images/unnamed.jpg" width="273"
 			height="200" alt="My Profile Picture">
 			<h1>Abigail Church</h1>
 		</header>
