--- a/cit230/index.html
+++ b/cit230/index.html
@@ -22,7 +22,7 @@
 		<main>
 			<h2>Assignment Portal</h2>
 			<ul>
-				<li>Lesson ##: <a href="#">Assignment Label</a></li>
+				<li>Lesson 3: <a href="lesson-3/fixedhtml.html">HTML Validation Assignment</a></li>
 			</ul>
 		</main>
 		<footer>
