--- a/cit230/lesson-3/fixedhtml.html
+++ b/cit230/lesson-3/fixedhtml.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Quad-Cities Transportation Center</title>
-		<meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
+		<meta name="description" content="The Quad-Cities Transportation Center has been serving the region for over 30 years.">
 		<link rel= "stylesheet" href="#">
 	</head>
 	<body>
 		<header>
-			<h1>The Quad-Cities Transporation Center</h1>
-			<h2>"We have your transporation needs covered!"</h2>
+			<h1>The Quad-Cities Transportation Center</h1>
+			<h2>"We have your transportation needs covered!"</h2>
 		</header>
     
 		<nav>
@@ -58,7 +58,7 @@
 			<p>Subscribe to our Newsletter to get daily specials emailed to you directly!!</p>
 			<p>To find out more, contact Bobby at 4455.
 			</p>
-			<p>Copyright &copy; 2016 |  The Quad-Cities Transporation Center   | Spokane Washington </p>
+			<p>Copyright &copy; 2016 |  The Quad-Cities Transportation Center   | Spokane Washington </p>
 		</footer>
 	</body>
 </html>
