--- a/cit230/lesson-3/fixedhtml.html
+++ b/cit230/lesson-3/fixedhtml.html
@@ -31,7 +31,7 @@
 				<li>Service Two</li>
 				<li>Products
 				<ul>
-					<li>Product 1
+					<li>Product 1</li>
 					<li>Product 2</li>
 					<li>Product 3</li>
 				</ul>
