--- a/cit230/index.html
+++ b/cit230/index.html
@@ -23,6 +23,11 @@
 			<h2>Assignment Portal</h2>
 			<ul>
 				<li>Lesson 3: <a href="lesson-3/fixedhtml.html">HTML Validation Assignment</a></li>
+				<li>Lesson 4:
+					<ul>
+						<li><a href="lesson-4/Website Planning Document.pdf">Website Plan</a></li>
+						<li><a href="lesson-4/franklin-4.html">Franklin WebDraft</a></li>
+					</ul>
 			</ul>
 		</main>
 		<footer>
