--- a/cit230/index.html
+++ b/cit230/index.html
@@ -6,6 +6,7 @@
 		initial-scale=1">
 		<meta name="description" content="Web frontend development
 		assignment for CIT230 at BYU-I">
+		<link rel="stylesheet" href="styles/normalize.css">
 		<link rel="stylesheet" href="styles/main.css">
 		<title>CIT 230 Assignment Portal | Abigail Church | BYU-
 		Idaho</title>
