--- a/cit230/index.html
+++ b/cit230/index.html
@@ -29,6 +29,7 @@
 						<li><a href="lesson-4/Website Planning Document.pdf">Website Plan</a></li>
 						<li><a href="lesson-4/franklin-4.html">Franklin WebDraft</a></li>
 					</ul>
+				<li>Lesson 5: <a href="lesson-5/franklin-5.html">Franklin Layout</a></li>
 			</ul>
 		</main>
 		<footer>
