--- a/cit230/index.html
+++ b/cit230/index.html
@@ -30,6 +30,7 @@
 						<li><a href="lesson-4/franklin-4.html">Franklin WebDraft</a></li>
 					</ul>
 				<li>Lesson 5: <a href="lesson-5/franklin-5.html">Franklin Layout</a></li>
+				<li>Lesson 6: <a href="lesson-6/franklin-6.html"></a>Franklin Image and Script Development</li>
 			</ul>
 		</main>
 		<footer>
