--- a/cit230/lesson-6/franklin-6.html
+++ b/cit230/lesson-6/franklin-6.html
@@ -18,7 +18,7 @@
 
 <header>
     <div>
-    <img src="images/optimized-logo.jpg" alt="Red Sky Logo" >
+    <img src="images/Optimized-logo.jpg" alt="Red Sky Logo" >
       <div>
         <h1>
          Red Sky Radar
