--- a/cit230/index.html
+++ b/cit230/index.html
@@ -31,6 +31,10 @@
 					</ul>
 				<li>Lesson 5: <a href="lesson-5/franklin-5.html">Franklin Layout</a></li>
 				<li>Lesson 6: <a href="lesson-6/franklin-6.html"></a>Franklin Image and Script Development</li>
+				<li>Lesson 7: 
+					<ul>
+						<a href="lesson-7/CSS-multiplebackgrounds-abbychurch.mp4">Student Presentation</a></li>
+					</ul>
 			</ul>
 		</main>
 		<footer>
