--- a/cit230/index.html
+++ b/cit230/index.html
@@ -33,7 +33,9 @@
 				<li>Lesson 6: <a href="lesson-6/franklin-6.html"></a>Franklin Image and Script Development</li>
 				<li>Lesson 7: 
 					<ul>
-						<a href="lesson-7/CSS-multiplebackgrounds-abbychurch.mp4">Student Presentation</a></li>
+						<li><a href="lesson-7/CSS-multiplebackgrounds-abbychurch.mp4">Student Presentation</a></li>
+						<li><a href="lesson-7/franklin-7.html">Franklin Java</a></li>
+						<li><a href="lesson-7/gallery-7.html">Gallery Page</a></li>
 					</ul>
 			</ul>
 		</main>
