--- a/cit230/index.html
+++ b/cit230/index.html
@@ -30,7 +30,7 @@
 						<li><a href="lesson-4/franklin-4.html">Franklin WebDraft</a></li>
 					</ul>
 				<li>Lesson 5: <a href="lesson-5/franklin-5.html">Franklin Layout</a></li>
-				<li>Lesson 6: <a href="lesson-6/franklin-6.html"></a>Franklin Image and Script Development</li>
+				<li>Lesson 6: <a href="lesson-6/franklin-6.html">Franklin Image and Script Development</a></li>
 				<li>Lesson 7: 
 					<ul>
 						<li><a href="lesson-7/CSS-multiplebackgrounds-abbychurch.mp4">Student Presentation</a></li>
