--- a/cit230/index.html
+++ b/cit230/index.html
@@ -26,7 +26,7 @@
 				<li>Lesson 3: <a href="lesson-3/fixedhtml.html">HTML Validation Assignment</a></li>
 				<li>Lesson 4:
 					<ul>
-						<li><a href="lesson-4/Website Planning Document.pdf">Website Plan</a></li>
+						<li><a href="lesson-4/Website_Planning_Document.pdf">Website Plan</a></li>
 						<li><a href="lesson-4/franklin-4.html">Franklin WebDraft</a></li>
 					</ul>
 				<li>Lesson 5: <a href="lesson-5/franklin-5.html">Franklin Layout</a></li>
