--- a/cit230/index.html
+++ b/cit230/index.html
@@ -29,6 +29,7 @@
 						<li><a href="lesson-4/Website_Planning_Document.pdf">Website Plan</a></li>
 						<li><a href="lesson-4/franklin-4.html">Franklin WebDraft</a></li>
 					</ul>
+				</li>	
 				<li>Lesson 5: <a href="lesson-5/franklin-5.html">Franklin Layout</a></li>
 				<li>Lesson 6: <a href="lesson-6/franklin-6.html">Franklin Image and Script Development</a></li>
 				<li>Lesson 7: 
@@ -37,6 +38,13 @@
 						<li><a href="lesson-7/franklin-7.html">Franklin Java</a></li>
 						<li><a href="lesson-7/gallery-7.html">Gallery Page</a></li>
 					</ul>
+				</li>	
+				<li>Lesson 8:
+					<ul>
+						<li><a href="lesson-8/tablebuild.html">Table Practice</a></li>
+						<li><a href="lesson-8/stormcenter.html"></a></li>
+					</ul>
+				</li>	
 			</ul>
 		</main>
 		<footer>
