--- a/cit230/lesson-8/tablebuild.html
+++ b/cit230/lesson-8/tablebuild.html
@@ -17,9 +17,11 @@
             ACME Wildwest
         </caption>
         <thead>
-            <th>Period</th>
-            <th>Sales</th>
-            <th>Sales Goal</th>
+            <tr>
+            <td>Period</td>
+            <td>Sales</td>
+            <td>Sales Goal</td>
+            </tr>
         </thead>
         <tbody>
         <tr>
