--- a/cit230/index.html
+++ b/cit230/index.html
@@ -44,6 +44,11 @@
 						<li><a href="lesson-8/tablebuild.html">Table Practice</a></li>
 						<li><a href="lesson-8/stormcenter.html"></a></li>
 					</ul>
+				</li>
+				<li>Lesson 9:
+					<ul>
+						<li><a href="lesson-9/heroes.html">Super Heroes</a></li>
+					</ul>
 				</li>	
 			</ul>
 		</main>
