--- a/cit230/index.html
+++ b/cit230/index.html
@@ -42,7 +42,7 @@
 				<li>Lesson 8:
 					<ul>
 						<li><a href="lesson-8/tablebuild.html">Table Practice</a></li>
-						<li><a href="lesson-8/stormcenter.html"></a></li>
+						<li><a href="lesson-8/stormcenter.html">Storm Center</a></li>
 					</ul>
 				</li>
 				<li>Lesson 9:
