--- a/cit230/lesson-9/stormcenter.html
+++ b/cit230/lesson-9/stormcenter.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-    <div>
+    <div class="logo">
     <img src="images/Optimized-logo.jpg" alt="Red Sky Logo" >
       <div>
         <h1>
@@ -31,12 +31,12 @@
       <script src="scripts/hamburger.js"></script>
     <button onclick="toggleMenu()"><img src="images/hamburger2.png" alt="burger"></button>
     <ul id="menu" class="hide">
-      <li><a href="#">Home</a></li>
-      <li><a href="franklin-8.html">Franklin</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="franklin-9.html">Franklin</a></li>
       <li><a href="#">Greenville</a></li>
       <li><a href="#">Springfield</a></li>
       <li class="active"><a href="stormcenter.html">Storm Center</a></li>
-      <li><a href="gallery-8.html">Gallery</a></li>
+      <li><a href="gallery-9.html">Gallery</a></li>
     </ul>		
     </nav>
 </header>
