--- a/cit230/lesson-9/thankyou.html
+++ b/cit230/lesson-9/thankyou.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-    <div>
+    <div class="logo">
     <img src="images/Optimized-logo.jpg" alt="Red Sky Logo" >
       <div>
         <h1>
