Updated Student page

--- a/cit230/index.html
+++ b/cit230/index.html
@@ -48,6 +48,7 @@
 				<li>Lesson 9:
 					<ul>
 						<li><a href="lesson-9/heroes.html">Super Heroes</a></li>
+						<li><a href="lesson-9/index.html">Main Page for Weather</a></li>
 					</ul>
 				</li>	
 			</ul>
