Prep for Usability

--- a/cit230/index.html
+++ b/cit230/index.html
@@ -50,6 +50,11 @@
 						<li><a href="lesson-9/heroes.html">Super Heroes</a></li>
 						<li><a href="lesson-9/index.html">Main Page for Weather</a></li>
 					</ul>
+				</li>
+				<li>Lesson 10:
+					<ul>
+						<li></li>
+					</ul>
 				</li>	
 			</ul>
 		</main>
