--- a/cit230/weathersite/gallery.html
+++ b/cit230/weathersite/gallery.html
@@ -54,7 +54,8 @@
 
     <footer includefile="footer.html">
     </footer>
-    <script src="scripts/currentdate.js"></script>
     <script src="scripts/include.js"></script>
+    <script src="scripts/currentdate.js"></script>
+    <script src="scripts/hamburger.js"></script>
 </body>
 </html>
