--- a/cit230/weathersite/gallery.html
+++ b/cit230/weathersite/gallery.html
@@ -56,5 +56,6 @@
     </footer>
     <script src="scripts/include.js"></script>
     <script src="scripts/hamburger.js"></script>
+    <script src="scripts/currentdate.js"></script>
 </body>
 </html>
