--- a/cit230/weathersite/gallery.html
+++ b/cit230/weathersite/gallery.html
@@ -58,4 +58,5 @@
     <script src="scripts/hamburger.js"></script>
 </body>
 <script src="scripts/currentdate.js"></script>
+<script src="scripts/active.js"></script>
 </html>
