--- a/cit230/weathersite/index.html
+++ b/cit230/weathersite/index.html
@@ -16,31 +16,10 @@
 </head>
 <body>
 
-<header>
-    <div class="logo">
-    <img src="images/Optimized-logo.jpg" alt="Red Sky Logo" >
-      <div>
-        <h1>
-         Red Sky Radar
-        </h1>
-        <div class="subheading">
-        Delightful  Weather <!-- May alter -->
-         </div>
-      </div>   
-    </div>
-		<nav>
-      <script src="scripts/hamburger.js"></script>
-    <button onclick="toggleMenu()"><img src="images/hamburger2.png" alt="burger"></button>
-    <ul id="menu" class="hide">
-      <li class="active"><a href="index.html">Home</a></li>
-      <li class="#"><a href="franklin.html">Franklin</a></li>
-      <li><a href="#">Greenville</a></li>
-      <li><a href="#">Springfield</a></li>
-      <li><a href="stormcenter.html">Storm Center</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-    </ul>		
-    </nav>
-</header>
+        <header includefile="header.html">
+            </header>
+            <nav includefile="navigation.html">		
+                </nav>
 
 <main>
     
@@ -95,18 +74,11 @@
     <script src="scripts/townstat.js"></script>
 </main>
     
-<footer>
-    <section class="contact">
-    <h6>I'm required</h6>
-     Contact information placeholder <br>
-      999.999.9999 <br>
-      123 Main St. Anytown, US 99999 <br>
-      Google Map
-    </section>
-    <section class="footer-bar">&copy;2018 | All Rights Reserved | Site Title | <span id="currentdate"></span>
-      <h6>I'm required</h6>
-    </section>
-</footer>
-    <script src="scripts/currentdate.js"></script>
+<footer includefile="footer.html">
+    </footer>
+    <script src="scripts/include.js"></script>
+    <script src="scripts/hamburger.js"></script>
 </body>
+<script src="scripts/currentdate.js"></script>
+<script src="scripts/active.js"></script>
 </html>
