--- a/cit230/weathersite/springfield.html
+++ b/cit230/weathersite/springfield.html
@@ -13,8 +13,7 @@
 	<link rel="stylesheet" href="styles/medium-5.css">
   <link rel="stylesheet" href="styles/large-5.css">
   
-</head>iv>
-      </div>
+</head>
 <body>
 
     <header includefile="header.html">
@@ -106,7 +105,8 @@
     </footer>
     <script src="scripts/include.js"></script>
     <script src="scripts/hamburger.js"></script>
-</body>
-<script src="scripts/currentdate.js"></script>
+    <script src="scripts/currentdate.js"></script>
 <script src="scripts/active.js"></script>
+</body>
+
 </html>
