--- a/cit230/index.html
+++ b/cit230/index.html
@@ -53,7 +53,7 @@
 				</li>
 				<li>Lesson 10:
 					<ul>
-						<li></li>
+						<li><a href="weathersite/index.html">Weather Site</a></li>
 					</ul>
 				</li>	
 			</ul>
