--- a/cit230/index.html
+++ b/cit230/index.html
@@ -58,7 +58,7 @@
 				</li>
 				<li>Lesson 11:
 					<ul>
-						<li><a href="lesson-11/Lesson4/index.htm">jQuery</a></li>
+						<li><a href="lesson-11/lesson-4/index.htm">jQuery</a></li>
 					</ul>
 				</li>	
 			</ul>
