--- a/cit230/lesson-11/lesson-4/index.htm
+++ b/cit230/lesson-11/lesson-4/index.htm
@@ -25,10 +25,10 @@
 <!-- Master Container Div -->
 	<div class="container">
 	<!-- Header Div containing the Logo & Navigation Links -->
-		<div class="header">
+		<header>
 			<div class="logo" id="alcoveLogo"></div>
 			<div class="navbar">
-				<ul class="navigation">
+				<ul cslass="navigation">
 					<li><a href="#">About Us</a></li>
 					<li><a href="#">Services</a></li>
 					<li><a href="#">Catalog</a></li>
@@ -37,7 +37,7 @@
 					<li><a href="#">Contact Us</a></li>
 				</ul>
 			</div>
-		</div>
+		</header>
 		<!-- Content Div -->
 		<div class="content">
 			<div class="headImage"></div>
@@ -111,9 +111,9 @@
 			</div>
 		</div>
 
-		<div class="footer">
-			<h5>© Alcove Digital Systems | <a href="#">Terms of Use</a> | <a href="InsertHTMLBegin.htm">Insert HTML</a> | <a href="animatedMenuBegin.htm">Animated Menu</a> | <a href="toggleButtonBegin.htm">Toggle Button</a> | <a href="DropDownMenuBegin">Drop Down Menu</a> | <a href="fruitBasketBegin.htm">Fruit Basket</a></h5>
-		</div>
+		<footer>
+			<h5>© Alcove Digital Systems | <a href="#">Terms of Use</a> | <a href="inserthtml.htm">Insert HTML</a> | <a href="animatedmenu.htm">Animated Menu</a> | <a href="togglebutton.htm">Toggle Button</a> | <a href="dropdownmenu.htm">Drop Down Menu</a> | <a href="fruitbasket.htm">Fruit Basket</a></h5>
+		</footer>
 	</div>
 </body>
 </html>
