--- a/cit230/final/index.html
+++ b/cit230/final/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width==device-width,
 		initial-scale=1">
 		<meta name="description" content="The home page of the Mountain Spoke website.">
+		<link href="https://fonts.googleapis.com/css?family=Markazi+Text|Open+Sans" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/medium.css">
