--- a/cit230/final/index.html
+++ b/cit230/final/index.html
@@ -36,7 +36,7 @@
         <footer includefile="footer.html">
 		</footer>
 		<script src="js/include.js"></script>
-		<script src="scripts/hamburger.js"></script>
-		<script src="scripts/active.js"></script>
+		<script src="js/hamburger.js"></script>
+		<script src="js/active.js"></script>
 	</body>
 </html>
