--- a/cit230/final/index.html
+++ b/cit230/final/index.html
@@ -22,12 +22,12 @@
 			<div>
 				<h2>Summer Sale! All trail bikes and mountain bikes 40% off!</h2>
 				<img src="img/download.jpg" alt="Mountain Bike on the Trail"> <br>
-				<a href="sales.html">Check out our store!</a>
+				<p><a href="sales.html">Check out our store!</a></p>
 			</div>
 			<div>
 				<h2>Book your next trip! Our <a href="adventureTours.html">Whitefish Tour</a> is still accepting bookings!</h2>
 				<img src="img/Going-to-the-Sun-Road_01.jpg" alt="Whitefish, Montana"> <br>
-				Look at our other <a href="adventureTours.html">tours</a> and <a href="event.html">events</a>!
+				<p>Look at our other <a href="adventureTours.html">tours</a> and <a href="event.html">events</a>!</p>
 			</div>
 			<div>
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2787.9314410354586!2d-111.09290618494214!3d45.6722766275568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5345459ab72cb6df%3A0xbb98968f9648ea88!2s3950+Valley+Commons+Dr%2C+Bozeman%2C+MT+59718!5e0!3m2!1sen!2sus!4v1531940272596" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
