--- a/cit230/final/adventureTours.html
+++ b/cit230/final/adventureTours.html
@@ -23,9 +23,11 @@
                 <p>Experience Glacier National Park and all the accomidations of Whitefish, Montana.
                     This tour is a great test for recreational bikers, though avid cyclists will have an easier ride.
                     Traveling around the beautiful mountains around an average 60 miles a day, and returning to basecamp.
-                    Our basecamp is one of the lovely cabin resorts with local chefs serving our nutritious meals.
-                    Only $2,695/person for 6 days and 5 nights on award winning tour! (Food is included in your cost)
+                    Our basecamp is one of the lovely cabin resorts with local chefs serving nutritious meals.
+                    Only $2,695/person for 6 days and 5 nights on an award winning tour! (Food is included in your cost) <br>
+                    <a href="form.html">Sign up here!</a>
                 </p>
+                <img src="img/glacier-park.jpg">
             </div>
             <div>
                 <h2>Journey to Yellowstone</h2>
@@ -33,7 +35,9 @@
                     ride alongside the Rocky Mountains, and arrive at Yellowstone with a quick pop-up to Beartooth
                     Pass. All of this you will accomplish in a week, riding an average of 65 miles a day. This newly
                     updated tour is only $3,000/person. This tour is recommended for Recreational through Racer levls.
-                     (Food is included in your cost)
+                     (Food is included in your cost) <br>
+                     <a href="form.html">Sign up here!</a>
+                     <img src="img/optimized-yellowstone.jpg">
                 </p>
             </div>
 		</main>
