--- a/cit230/final/contact.html
+++ b/cit230/final/contact.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
-		<title>Mountain Spoke | Adventure Tours | When in Doubt, Pedal it Out</title>
+		<title>Mountain Spoke | Contact Us | When in Doubt, Pedal it Out</title>
 	</head>
 	<body>
         <header includefile="header.html">
@@ -18,7 +18,22 @@
         <nav includefile="navigation.html">
 		</nav>
 		<main>
-			
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2787.9314410354586!2d-111.09290618494214!3d45.6722766275568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5345459ab72cb6df%3A0xbb98968f9648ea88!2s3950+Valley+Commons+Dr%2C+Bozeman%2C+MT+59718!5e0!3m2!1sen!2sus!4v1531940272596" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <h2>Contact Information</h2>
+            <ul>
+                <li>Phone: 724-737-4351</li>
+                <li>Email: mountainspoke@fake.com</li>
+                <li>Facebook: MountainSpokeBikeShop</li>
+                <li>Twitter: @mntspoke</li>
+            </ul>
+            <form>
+                <fieldset>
+                    <legend>Send us a message:</legend>
+                    <textarea name="comments" rows="10" cols="30"></textarea>
+                </fieldset>
+    
+                <input type="submit" value = "Message" class="submitBtn">
+            </form>
 		</main>
         <footer includefile="footer.html">
 		</footer>
