--- a/cit230/final/service.html
+++ b/cit230/final/service.html
@@ -18,15 +18,10 @@
         <nav includefile="navigation.html">
 		</nav>
 		<main>
-            <table>
-                <caption>Mountain Spoke Repair Services</caption>
-                <tr>
-                    <th></th>
-                </tr>
-            </table>
 		</main>
         <footer includefile="footer.html">
-		</footer>
+        </footer>
+        <script src="js/service.js"></script>
 		<script src="js/include.js"></script>
 		<script src="js/hamburger.js"></script>
 		<script src="js/active.js"></script>
