--- a/cit230/final/form.html
+++ b/cit230/final/form.html
@@ -61,7 +61,7 @@
                     <textarea name="comments" rows="10" cols="30"></textarea>
                 </fieldset>
     
-                <input type="submit" value = "Report" class="submitBtn">
+                <input type="submit" value = "Register" class="submitBtn">
             </form>
 		</main>
         <footer includefile="footer.html">
