--- a/cit230/final/adventureTours.html
+++ b/cit230/final/adventureTours.html
@@ -37,8 +37,8 @@
                     updated tour is only $3,000/person. This tour is recommended for Recreational through Racer levls.
                      (Food is included in your cost) <br>
                      <a href="form.html">Sign up here!</a>
-                     <img src="img/optimized-yellowstone.jpg">
                 </p>
+                <img id=adventureFix src="img/optimized-yellowstone.jpg">
             </div>
 		</main>
         <footer includefile="footer.html">
