--- a/cit230/final/event.html
+++ b/cit230/final/event.html
@@ -18,12 +18,14 @@
         <nav includefile="navigation.html">
 		</nav>
 		<main>
-            <h2>Cycle the Continental Divide</h2>
-            <p>The people of Montana are gathering together in raising money for Right to Play!
-            We have converted one of our trips into a once in a lifetime event where 80% of your
-            purchase will go toward the Right to Play organization. This event is taking place October 5th
-            please <a href="form.html">sign up here!</a></p>
-            <img src="img/divide-bike.jpg">
+			<div>
+				<h2>Cycle the Continental Divide</h2>
+				<p>The people of Montana are gathering together in raising money for Right to Play!
+				We have converted one of our trips into a once in a lifetime event where 80% of your
+				purchase will go toward the Right to Play organization. This event is taking place October 5th
+				please <a href="form.html">sign up here!</a></p>
+				<img src="img/divide-bike.jpg">
+			</div>
 		</main>
         <footer includefile="footer.html">
 		</footer>
