--- a/cit230/final/event.html
+++ b/cit230/final/event.html
@@ -18,7 +18,7 @@
         <nav includefile="navigation.html">
 		</nav>
 		<main>
-			<div>
+			<div id="solo">
 				<h2>Cycle the Continental Divide</h2>
 				<p>The people of Montana are gathering together in raising money for Right to Play!
 				We have converted one of our trips into a once in a lifetime event where 80% of your
