--- a/cit230/final/event.html
+++ b/cit230/final/event.html
@@ -17,8 +17,8 @@
         </header>
         <nav includefile="navigation.html">
 		</nav>
-		<main>
-			<div id="solo">
+		<main id="solo">
+			<div>
 				<h2>Cycle the Continental Divide</h2>
 				<p>The people of Montana are gathering together in raising money for Right to Play!
 				We have converted one of our trips into a once in a lifetime event where 80% of your
