--- a/cit230/final/sales.html
+++ b/cit230/final/sales.html
@@ -15,7 +15,7 @@
             $(document).ready(function(){
                 $('.head').click(function(e){
                 e.preventDefault();
-                $(this).closest('li').find('.content').not('animated').slideToggle();
+                $(this).closest('li').find('.content').not(':animated').slideToggle();
                 });
             });
         </script>
@@ -29,7 +29,7 @@
 		<main>
             <ul>
                 <li>
-                    <a href="#" class="head">Trek Fuel EX 7 29</a>
+                    <h2 class="head">Trek Fuel EX 7 29</h2>
                     <div class="content">
                         <img src="img/fuelex729.jpeg">
                         <p>Fuel EX 7 shines when you're charging down tricky descents,
@@ -39,7 +39,7 @@
                             <button class="buy"><s>$2500</s>$1500</button>
                     </div>
                     
-                    <a href="#" class="head">Evil Following MB</a>
+                    <h2 class="head">Evil Following MB</h2>
                     <div class="content">
                         <img src="img/evl-pa-flw.jpg">
                         <p>This bike has been built by our mechanics with Shimano’s 1x11 drivetrain. 
@@ -52,7 +52,7 @@
                         <button class="buy"><s>$5000</s>$3000</button>
                     </div>
                     
-                    <a href="#" class="head">Pivot Firebird 29</a>
+                    <h2 class="head">Pivot Firebird 29</h2>
                     <div class="content">
                         <img src="img/firebird-29.jpg">
                         <p>Words can hardly describe the feeling of riding a bike like the Firebird 29. It’s terrifyingly fast. 
