--- a/cit230/final/service.html
+++ b/cit230/final/service.html
@@ -17,7 +17,7 @@
         </header>
         <nav includefile="navigation.html">
 		</nav>
-		<main>
+		<main id="grid">
 		</main>
         <footer includefile="footer.html">
         </footer>
