--- a/cit230/final/sales.html
+++ b/cit230/final/sales.html
@@ -29,7 +29,7 @@
 		<main>
             <ul>
                 <li>
-                    <h2 class="head">Trek Fuel EX 7 29</h2>
+                    <h2 class="head">Trek Fuel EX 7 29 &darr;</h2>
                     <div class="content">
                         <img src="img/fuelex729.jpeg">
                         <p>Fuel EX 7 shines when you're charging down tricky descents,
@@ -40,7 +40,7 @@
                     </div>
                 </li>
                 <li>   
-                    <h2 class="head">Evil Following MB</h2>
+                    <h2 class="head">Evil Following MB &darr;</h2>
                     <div class="content">
                         <img src="img/evl-pa-flw.jpg">
                         <p>This bike has been built by our mechanics with Shimano’s 1x11 drivetrain. 
@@ -54,7 +54,7 @@
                     </div>
                 </li>
                 <li>    
-                    <h2 class="head">Pivot Firebird 29</h2>
+                    <h2 class="head">Pivot Firebird 29 &darr;</h2>
                     <div class="content">
                         <img src="img/firebird-29.jpg">
                         <p>Words can hardly describe the feeling of riding a bike like the Firebird 29. It’s terrifyingly fast. 
