--- a/cit230/final/contact.html
+++ b/cit230/final/contact.html
@@ -28,7 +28,7 @@
                     <li>Twitter: @mntspoke</li>
                 </ul>
             </div>
-            <form>
+            <form method="get" action="thankyou.html">
                 <fieldset>
                     <legend>Send us a message:</legend>
                     <textarea name="comments" rows="10" cols="37"></textarea>
