--- a/cit230/final/form.html
+++ b/cit230/final/form.html
@@ -17,8 +17,8 @@
         </header>
         <nav includefile="navigation.html">
 		</nav>
-		<main>
-            <h1>Join Us on the Adventure of a lifetime!</h1>
+		<main id="form">
+            <h2>Join Us on the Adventure of a lifetime!</h2>
             <form method="get" action="thankyou.html">
                 <fieldset>
                     <legend>Contact Information</legend>
