--- a/cit230/final/thankyou.html
+++ b/cit230/final/thankyou.html
@@ -17,8 +17,8 @@
         </header>
         <nav includefile="navigation.html">
 		</nav>
-		<main id="form">
-            <h1>Thank YOU, WE WILL GET IN CONTACT WITH YOU ASAP!</h1>
+		<main>
+            <h1>THANK YOU, WE WILL GET IN CONTACT WITH YOU ASAP!</h1>
             <img src="img/polite-bow.jpg">
 		</main>
         <footer includefile="footer.html">
