--- a/cit230/final/sales.html
+++ b/cit230/final/sales.html
@@ -32,10 +32,10 @@
                     <h2 class="head">Trek Fuel EX 7 29 &darr;</h2>
                     <div class="content">
                         <img src="img/fuelex729.jpeg">
-                        <p>Fuel EX 7 shines when you're charging down tricky descents,
+                        <p>"Fuel EX 7 shines when you're charging down tricky descents,
                             where the dropper post upgrade and 130mm of front and rear suspension travel come in handy.
                             A lightweight aluminum frame, Tubeless Ready 29er wheels, 
-                            and a reliable 1x11 SRAM NX drivetrain make this an awesome all-around full suspension mountain bike.</p>
+                            and a reliable 1x11 SRAM NX drivetrain make this an awesome all-around full suspension mountain bike."(Trek)</p>
                             <button class="buy"><s>$2500</s>$1500</button>
                     </div>
                 </li>
@@ -43,13 +43,13 @@
                     <h2 class="head">Evil Following MB &darr;</h2>
                     <div class="content">
                         <img src="img/evl-pa-flw.jpg">
-                        <p>This bike has been built by our mechanics with Shimano’s 1x11 drivetrain. 
+                        <p>"This bike has been built by our mechanics with Shimano’s 1x11 drivetrain. 
                             An 11-46T cassette gives you range to climb steep and descend fast. 
                             Race Face’s Aeffect line covers the cranks and cockpit, giving you lightweight efficiency and exceedingly responsive handling. 
                             You also get the lightweight reliability of E.13’s wheels and tires. 
                             Shimano’s XT brakes offer ample stopping power for navigating tricky situations. 
                             The frame is made with uni-directional one-piece carbon fiber and features integrated chain guides and cable routing. 
-                            The downtube and chainstays feature rubber protectors, and the bolt-on, boost axles are smooth and stable.</p>
+                            The downtube and chainstays feature rubber protectors, and the bolt-on, boost axles are smooth and stable."(JensonUSA)</p>
                         <button class="buy"><s>$5000</s>$3000</button>
                     </div>
                 </li>
@@ -57,11 +57,11 @@
                     <h2 class="head">Pivot Firebird 29 &darr;</h2>
                     <div class="content">
                         <img src="img/firebird-29.jpg">
-                        <p>Words can hardly describe the feeling of riding a bike like the Firebird 29. It’s terrifyingly fast. 
+                        <p>"Words can hardly describe the feeling of riding a bike like the Firebird 29. It’s terrifyingly fast. 
                             It knows no limits. It’s... insane. For a bike that fearlessly dominates downhill terrain, 
                             it’s incredibly well behaved on the climbs. It’s a bike that never could have existed without the bold innovation of a company like Pivot. 
                             They took the rule book and burned it - out of the ashes came the biggest, 
-                            baddest thing the mountain bike world has ever seen.</p>
+                            baddest thing the mountain bike world has ever seen."(Golden Bike Shop)</p>
                         <button class="buy"><s>$5500</s>$3800</button>
                     </div>
                 </li>
