--- a/cit230/final/service.html
+++ b/cit230/final/service.html
@@ -19,6 +19,9 @@
 		</nav>
 		<main id="grid">
 		</main>
+		<div>
+			<p>*Repairs provided by L9Sports, see Reference*</p>
+		</div>
         <footer includefile="footer.html">
         </footer>
         <script src="js/service.js"></script>
