--- a/cit230/final/thankyou.html
+++ b/cit230/final/thankyou.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
-		<title>Mountain Spoke | Registration | When in Doubt, Pedal it Out</title>
+		<title>Mountain Spoke | Thank You | When in Doubt, Pedal it Out</title>
 	</head>
 	<body>
         <header includefile="header.html">
@@ -19,7 +19,7 @@
 		</nav>
 		<main>
             <h1>THANK YOU, WE WILL GET IN CONTACT WITH YOU ASAP!</h1>
-            <img src="img/polite-bow.jpg">
+            <img class="bow" src="img/polite-bow.jpg">
 		</main>
         <footer includefile="footer.html">
 		</footer>
