Just the vid left! AH!

--- a/cit230/final/adventureTours.html
+++ b/cit230/final/adventureTours.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width==device-width,
 		initial-scale=1">
-		<meta name="description" content="The home page of the Mountain Spoke website.">
+		<meta name="description" content="List of our Adventure Tours.">
 		<link href="https://fonts.googleapis.com/css?family=Markazi+Text|Open+Sans" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
@@ -27,7 +27,7 @@
                     Only $2,695/person for 6 days and 5 nights on an award winning tour! (Food is included in your cost) <br>
                     <a href="form.html">Sign up here!</a>
                 </p>
-                <img src="img/glacier-park.jpg">
+                <img src="img/glacier-park.jpg" alt="Biking through Glacier Park">
             </div>
             <div>
                 <h2>Journey to Yellowstone</h2>
@@ -38,7 +38,7 @@
                      (Food is included in your cost) <br>
                      <a href="form.html">Sign up here!</a>
                 </p>
-                <img id=adventureFix src="img/optimized-yellowstone.jpg">
+                <img id=adventureFix src="img/optimized-yellowstone.jpg" alt="Biking through Yellowstone">
             </div>
 		</main>
         <footer includefile="footer.html">
