--- a/cit230/final/event.html
+++ b/cit230/final/event.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width==device-width,
 		initial-scale=1">
-		<meta name="description" content="The home page of the Mountain Spoke website.">
+		<meta name="description" content="Our Events page">
 		<link href="https://fonts.googleapis.com/css?family=Markazi+Text|Open+Sans" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
@@ -24,7 +24,7 @@
 				We have converted one of our trips into a once in a lifetime event where 80% of your
 				purchase will go toward the Right to Play organization. This event is taking place October 5th
 				please <a href="form.html">sign up here!</a></p>
-				<img src="img/divide-bike.jpg">
+				<img src="img/divide-bike.jpg" alt="Biking the Continental Divide">
 			</div>
 		</main>
         <footer includefile="footer.html">
