--- a/cit230/final/sales.html
+++ b/cit230/final/sales.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width==device-width,
 		initial-scale=1">
-		<meta name="description" content="The home page of the Mountain Spoke website.">
+		<meta name="description" content="Bike Store">
 		<link href="https://fonts.googleapis.com/css?family=Markazi+Text|Open+Sans" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
@@ -31,7 +31,7 @@
                 <li>
                     <h2 class="head">Trek Fuel EX 7 29 &darr;</h2>
                     <div class="content">
-                        <img src="img/fuelex729.jpeg">
+                        <img src="img/fuelex729.jpeg" alt="Trek Fuel Bike">
                         <p>"Fuel EX 7 shines when you're charging down tricky descents,
                             where the dropper post upgrade and 130mm of front and rear suspension travel come in handy.
                             A lightweight aluminum frame, Tubeless Ready 29er wheels, 
@@ -42,7 +42,7 @@
                 <li>   
                     <h2 class="head">Evil Following MB &darr;</h2>
                     <div class="content">
-                        <img src="img/evl-pa-flw.jpg">
+                        <img src="img/evl-pa-flw.jpg" alt="Evil Following Bike">
                         <p>"This bike has been built by our mechanics with Shimano’s 1x11 drivetrain. 
                             An 11-46T cassette gives you range to climb steep and descend fast. 
                             Race Face’s Aeffect line covers the cranks and cockpit, giving you lightweight efficiency and exceedingly responsive handling. 
@@ -56,7 +56,7 @@
                 <li>    
                     <h2 class="head">Pivot Firebird 29 &darr;</h2>
                     <div class="content">
-                        <img src="img/firebird-29.jpg">
+                        <img src="img/firebird-29.jpg" alt="Pivot Firebird Bike">
                         <p>"Words can hardly describe the feeling of riding a bike like the Firebird 29. It’s terrifyingly fast. 
                             It knows no limits. It’s... insane. For a bike that fearlessly dominates downhill terrain, 
                             it’s incredibly well behaved on the climbs. It’s a bike that never could have existed without the bold innovation of a company like Pivot. 
