--- a/cit230/final/thankyou.html
+++ b/cit230/final/thankyou.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width==device-width,
 		initial-scale=1">
-		<meta name="description" content="The home page of the Mountain Spoke website.">
+		<meta name="description" content="thank you page for forms.">
 		<link href="https://fonts.googleapis.com/css?family=Markazi+Text|Open+Sans" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
@@ -19,7 +19,7 @@
 		</nav>
 		<main>
             <h1>THANK YOU, WE WILL GET IN CONTACT WITH YOU ASAP!</h1>
-            <img class="bow" src="img/polite-bow.jpg">
+            <img class="bow" src="img/polite-bow.jpg" alt="polite employees">
 		</main>
         <footer includefile="footer.html">
 		</footer>
