--- a/cit230/final/resources.html
+++ b/cit230/final/resources.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width==device-width,
 		initial-scale=1">
-		<meta name="description" content="The home page of the Mountain Spoke website.">
+		<meta name="description" content="Resources for my Web Project">
 		<link href="https://fonts.googleapis.com/css?family=Markazi+Text|Open+Sans" rel="stylesheet">
 		<title>Mountain Spoke | Resources | When in Doubt, Pedal it Out</title>
 	</head>
